crates/oxc_react_compiler/tests/snapshots/preserve-memo-validation__error.validate-useMemo-named-function.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/preserve-memo-validation/error.validate-useMemo-named-function.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] UseMemo: Expected the first argument to be an inline function expression", labels: [LabeledSpan { label: Some("Expected the first argument to be an inline function expression"), span: SourceSpan { offset: 362, length: 10 }, primary: false }], help: Some("Expected the first argument to be an inline function expression"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
