crates/oxc_react_compiler/tests/snapshots/preserve-memo-validation__maybe-invalid-useMemo-no-memoblock-sideeffect.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/preserve-memo-validation/maybe-invalid-useMemo-no-memoblock-sideeffect.ts
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] VoidUseMemo: useMemo() callbacks must return a value", labels: [LabeledSpan { label: Some("useMemo() callbacks must return a value"), span: Span { start: 363, end: 440 }, primary: false }], help: Some("This useMemo() callback doesn't return a value. useMemo() is for computing and caching values, not for arbitrary side effects"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

// @validatePreserveExistingMemoizationGuarantees
import { useMemo } from "react";
// This is currently considered valid because we don't ensure that every
// instruction within manual memoization gets assigned to a reactive scope
// (i.e. inferred non-mutable or non-escaping values don't get memoized)
function useFoo(t0) {
	const { minWidth, styles, setStyles } = t0;
	if (styles.width > minWidth) {
		setStyles(styles);
	}
}
export const FIXTURE_ENTRYPOINT = {
	fn: useFoo,
	params: [{
		minWidth: 2,
		styles: { width: 1 },
		setStyles: () => {}
	}]
};
